--- a/agregarProducto.html
+++ b/agregarProducto.html
@@ -39,7 +39,7 @@
         <form class="formulario__agregarProducto" data-formAgregarProducto>
             <legend class="formulario__titulo formulario__titulo--h2">Agregar nuevo producto</legend>
             <div class="formulario__box">
-                <input class="input" id="imagenProducto" type="file" onchange="readURL(this);" name="imagenProducto" placeholder="URL de imagen" required data-tipo="imagenProducto">
+                <input class="input" id="imagenProducto" type="url" onchange="readURL(this);" name="imagenProducto" placeholder="URL de imagen" required data-tipo="imagenProducto">
                 <label class="etiqueta" for="imagenProducto">URL de imagen</label>
                 <span class="input__error"></span>
             </div>
@@ -107,5 +107,6 @@
     <script src="js/validacionesFormulario.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="js/agregarProducto.js"></script>
+    <script src="js/Servicios/crearImagen.js"></script>
 </body>
 </html>
