--- a/editarProducto.html
+++ b/editarProducto.html
@@ -39,7 +39,7 @@
         <form class="formulario__agregarProducto" data-formEditarProducto>
             <legend class="formulario__titulo formulario__titulo--h2">Editar producto</legend>
             <div class="formulario__box">
-                <input class="input" id="imagenProducto" type="file" onchange="readURL(this);" name="imagenProducto" placeholder="URL de imagen" required data-tipo="imagenProducto">
+                <input class="input" id="imagenProducto" type="url" onchange="readURL(this);" name="imagenProducto" placeholder="URL de imagen" required data-tipo="imagenProducto">
                 <label class="etiqueta" for="imagenProducto">URL de imagen</label>
                 <span class="input__error"></span>
             </div>
@@ -106,5 +106,6 @@
     </footer>
     <script src="js/validacionesFormulario.js"></script>
     <script type="module" src="js/editarProducto.js"></script>
+    <script src="js/Servicios/crearImagen.js"></script>
 </body>
 </html>
