--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <footer class="rodapie">
         <section class="rodapie__principal">
-            <div>
-                <img class="rodapie__logo" src="assets/img/Logo.png">
+            <div class="rodapie__logo">
+                <img class="rodapie__logo__imagen" src="assets/img/Logo.png">
             </div>
             <ul class="rodapie__links">
                     <li class="rodapie__links__item"><a href="">Quienes somos</a></li>
