--- a/editarProducto.html
+++ b/editarProducto.html
@@ -43,7 +43,7 @@
                 <label class="etiqueta" for="imagenProducto">URL de imagen</label>
                 <span class="input__error"></span>
             </div>
-            <div>
+            <div class="vistaPreviaImagenProducto__container">
                 <img src="" class="vistaPreviaImagenProducto" id="vistaPreviaImagenProducto" alt="">
             </div>
             <div class="formulario__box">
