Correccion gap entre imagenes

--- a/administrador.html
+++ b/administrador.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
         </section>
+        <input class="encabezado__buscadorDesplegable" id="encabezado__buscadorDesplegable" type="search" placeholder="¿Que deseas buscar?" data-buscador>
     </header>
     <main class="contenido">
         <section class="contenido__container">
