--- a/agregarProducto.html
+++ b/agregarProducto.html
@@ -35,7 +35,7 @@
         <form class="formulario__agregarProducto" data-formAgregarProducto>
             <legend class="formulario__titulo formulario__titulo--h2">Agregar nuevo producto</legend>
             <div class="formulario__box">
-                <input class="input" id="imagenProducto" type="url" onchange="readURL(this);" 1 name="imagenProducto" placeholder="URL de imagen" required data-tipo="imagenProducto">
+                <input class="input" id="imagenProducto" type="url" onchange="readURL(this);"  name="imagenProducto" placeholder="URL de imagen" required data-tipo="imagenProducto">
                 <label class="etiqueta" for="imagenProducto">URL de imagen</label>
                 <span class="input__error"></span>
             </div>
