--- a/agregarProducto.html
+++ b/agregarProducto.html
@@ -103,6 +103,6 @@
     <script src="js/validacionesFormulario.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="js/agregarProducto.js"></script>
-    <script src="js/servicios/crearImagen.js"></script>.
+    <script src="js/servicios/crearImagen.js"></script>
 </body>
 </html>
